--- a/WebHunt-2022-Frontend/package.json
+++ b/WebHunt-2022-Frontend/package.json
@@ -8,7 +8,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "animejs": "^3.2.1",
-    "axios": "^0.26.1",
+    "axios": "^1.6.2",
     "firebase": "^9.6.10",
     "react": "^17.0.2",
     "react-countdown": "^2.3.2",
@@ -17,12 +17,12 @@
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.8",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.1",
     "react-spring": "^9.4.2",
     "react-toastify": "^8.2.0",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
-    "serve": "^13.0.2",
+    "serve": "^14.2.1",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
